[gd_scene load_steps=3 format=3 uid="uid://de32sc6d32wrw"]

[ext_resource type="Script" uid="uid://duga6f0q3lb0y" path="res://scripts/ui/CashRegisterMenu.gd" id="1_aqr5p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oifjp"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5

[node name="CashRegisterMenu" type="Panel"]
custom_minimum_size = Vector2(300, 200)
offset_right = 300.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oifjp")
script = ExtResource("1_aqr5p")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 15.0
offset_right = 100.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Касса"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentMoneyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "В кассе: 5000₽"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_right = -30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Сумма:"
vertical_alignment = 1

[node name="AmountSpinBox" type="SpinBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_right = 80.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
min_value = 100.0
max_value = 10000.0
step = 100.0
value = 100.0
alignment = 1

[node name="TakeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 50.0
offset_right = 60.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
text = "Взять деньги"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "X"
